# voicewin

./: .gitignore  Cargo.toml  LICENSE  design-draft.md  design-require.md  ggml-plan.md  plan.md  plan_mac.md
.cargo/: config.toml
.github/workflows/: voicewin-windows-portable.yml
voicewin-app/: Cargo.toml
voicewin-appcore/: Cargo.toml
voicewin-appcore/src/: service.rs
voicewin-audio/: Cargo.toml
voicewin-audio/src/: lib.rs  recorder.rs  resample.rs  windows.rs
voicewin-cli/: Cargo.toml
voicewin-cli/src/: main.rs
voicewin-core/: Cargo.toml
voicewin-core/src/: config.rs  context.rs  enhancement.rs  lib.rs  power_mode.rs  stt.rs  text.rs  types.rs
voicewin-engine/: Cargo.toml
voicewin-engine/src/: engine.rs  lib.rs  session.rs  traits.rs
voicewin-engine/tests/: engine_integration.rs
voicewin-gui/: Cargo.toml
voicewin-gui/src/: main.rs
voicewin-platform/: Cargo.toml
voicewin-platform/src/: lib.rs  macos.rs  macos_foreground.rs  macos_insert.rs  test.rs  windows.rs  windows_foreground.rs  windows_insert.rs
voicewin-providers/: Cargo.toml
voicewin-providers/src/: elevenlabs.rs  elevenlabs_realtime.rs  lib.rs  openai_compatible.rs  parse.rs  request.rs  runtime.rs
voicewin-runtime/: Cargo.toml
voicewin-runtime/src/: config_store.rs  defaults.rs  history.rs  ipc.rs  lib.rs  llm.rs  local_stt.rs  models.rs  runtime_engine.rs  secrets.rs  stt.rs  stt_router.rs
voicewin-tauri/: index.html  package.json  tsconfig.json  vite.config.ts
voicewin-tauri/src/: global.d.ts  main.tsx  overlay.html  overlay.tsx
voicewin-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
voicewin-tauri/src-tauri/capabilities/: default.json  macos.json  windows_macos.json
voicewin-tauri/src-tauri/icons/: icon.icns
voicewin-tauri/src-tauri/permissions/: app.toml
voicewin-tauri/src-tauri/src/: lib.rs  main.rs  session_controller.rs
voicewin-tauri/src/lib/: invoker.ts  types.ts
voicewin-tauri/src/ui/: App.test.tsx  App.tsx  HistoryPage.tsx  ModelsPage.tsx  Overlay.tsx  OverviewPage.tsx  ProfilesPage.tsx  Settings.prompts.test.tsx  Settings.test.tsx  Settings.tsx  SettingsPage.tsx  styles.css  tokens.css
