[package]
name = "voicewin-engine"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
autobins = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
voicewin-core = { path = "../voicewin-core" }
voicewin-providers = { path = "../voicewin-providers" }

[dev-dependencies]
wiremock = "0.6"
