[package]
name = "voicewin-gui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
voicewin-core = { path = "../voicewin-core" }
voicewin-engine = { path = "../voicewin-engine" }
voicewin-platform = { path = "../voicewin-platform" }
voicewin-runtime = { path = "../voicewin-runtime" }
