[package]
name = "voicewin-platform"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
voicewin-core = { path = "../voicewin-core" }
voicewin-engine = { path = "../voicewin-engine" }

[target.'cfg(windows)'.dependencies]
enigo = "0.6.1"
clipboard-win = { version = "5.4.1", features = ["std"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_UI_WindowsAndMessaging"
] }

