[package]
name = "voicewin-providers"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
autobins = false

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
voicewin-core = { path = "../voicewin-core" }
